// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textTransform renders 0 1`] = `
Array [
  .c0 {
  text-transform: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders function 1`] = `
Array [
  .c0 {
  text-transform: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders invalid theme path 1`] = `
Array [
  .c0 {
  text-transform: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders negative number 1`] = `
Array [
  .c0 {
  text-transform: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-transform: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-transform: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-transform: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-transform: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-transform: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-transform: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-transform: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-transform: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-transform: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    text-transform: July;
  }
}

@media April {
  .c0 {
    text-transform: August;
  }
}

@media January {
  .c0 {
    text-transform: September;
  }
}

@media April {
  .c0 {
    text-transform: November;
  }
}

@media June {
  .c0 {
    text-transform: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-transform: July;
  }
}

@media April {
  .c0 {
    text-transform: August;
  }
}

@media January {
  .c0 {
    text-transform: September;
  }
}

@media April {
  .c0 {
    text-transform: November;
  }
}

@media June {
  .c0 {
    text-transform: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-transform: January;
  }
}

@media April {
  .c0 {
    text-transform: December;
  }
}

@media January {
  .c0 {
    text-transform: April;
  }
}

@media April {
  .c0 {
    text-transform: May;
  }
}

@media June {
  .c0 {
    text-transform: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-transform: January;
  }
}

@media April {
  .c0 {
    text-transform: December;
  }
}

@media January {
  .c0 {
    text-transform: April;
  }
}

@media April {
  .c0 {
    text-transform: May;
  }
}

@media June {
  .c0 {
    text-transform: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders postitive number 1`] = `
Array [
  .c0 {
  text-transform: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders string 1`] = `
Array [
  .c0 {
  text-transform: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textTransform renders valid theme path 1`] = `
Array [
  .c0 {
  text-transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-transform: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
